--- a/dotnet-course-code/HelloWorld/Models/Models.csproj
+++ b/dotnet-course-code/HelloWorld/Models/Models.csproj
@@ -12,6 +12,10 @@
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.13" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+	 <None Update="appsettings.json">
+		 <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	 </None>
   </ItemGroup>
 
 </Project>
