--- a/dotnet-course-code/HelloWorld/ReadAndWriteFiles/ReadAndWriteFiles.csproj
+++ b/dotnet-course-code/HelloWorld/ReadAndWriteFiles/ReadAndWriteFiles.csproj
@@ -8,11 +8,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="bin\Debug\net7.0\Computers.json" />
+  </ItemGroup>
+
+  <ItemGroup>
 	  <PackageReference Include="Dapper" Version="2.1.21" />
 	  <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.2" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.13" />
 	  <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	  <None Update="appsettings.json">
 		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </None>
