--- a/dotnet-course-code/HelloWorld/ReadAndWriteFiles/ReadAndWriteFiles.csproj
+++ b/dotnet-course-code/HelloWorld/ReadAndWriteFiles/ReadAndWriteFiles.csproj
@@ -8,10 +8,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="bin\Debug\net7.0\ComputersSnake.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="bin\Debug\net7.0\Computers.json" />
   </ItemGroup>
 
   <ItemGroup>
+	  <PackageReference Include="AutoMapper" Version="12.0.1" />
 	  <PackageReference Include="Dapper" Version="2.1.21" />
 	  <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.2" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
